Added SnpEff annotations Save to file and then done

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -222,13 +222,13 @@
       "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]"
      ],
      "language": "python",
-     "prompt_number": 4
+     "prompt_number": 209
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The newborn set was output to a modified version of Plink's tab2vcf script and annotated with coding consequences using ensembl's VEP version 81 for grch37 (ftp://ftp.ensembl.org/pub/release-81/variation/VEP/homo_sapiens_vep_81_GRCh37.tar.gz). "
+      "The newborn set was output to a modified version of Plink's tab2vcf script to create a VCF file for use with SnpEff. "
      ]
     },
     {
@@ -240,7 +240,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "newborns.tsv\n0 1 2 3 6 7 9 4 5 8\n"
+        "newborns.tsv\n0 1 2 3\n"
        ]
       }
      ],
@@ -249,11 +249,8 @@
       "import sys\n",
       "\n",
       "# output columns to vcf file using a modified version of anntools tab2vcf.py\n",
-      "nb_to_vcf = newborns[['chrom','pos', 'ref', 'alt', 'qual', 'filter','rs_id', 'sample_id', 'gt','gene']]\n",
-      "# rename rsid column\n",
-      "nb_to_vcf = nb_to_vcf.rename(columns = {'rs_id':'id'})\n",
-      "# add unique variant id to rows that have no rsid\n",
-      "nb_to_vcf['id'].fillna(nb_to_vcf.apply(lambda x:'{}:{}:{}:{}'.format(x['chrom'],x['pos'], x['ref'], x['alt']),axis=1), inplace=True)\n",
+      "nb_to_vcf = newborns[['chrom','pos', 'ref', 'alt']]\n",
+      "\n",
       "\n",
       "# write to file for conversion to vcf\n",
       "nb_to_vcf.to_csv('{}/newborns.tsv'.format(os.getcwd()), header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
@@ -264,7 +261,34 @@
       "except Exception,e: print str(e)"
      ],
      "language": "python",
-     "prompt_number": 5
+     "prompt_number": 112
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The VCF file was annotated with coding consequences using SnpEff version 4.1h (build 2015-08-03) with _GRCh37.75. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "# run SnpEff on newborns.vcf for windows\n",
+      "#!java -Xmx4g -jar `cygpath -m /cygdrive/D/Documents/tools/snpEff/snpEff.jar` -v GRCh37.75 ./newborns.tsv.vcf > \n",
+      "# newborns_annot.vcf"
+     ],
+     "language": "python",
+     "prompt_number": 108
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The annotations were read back into Python, parsed and matched with the variant data frame."
+     ]
     },
     {
      "cell_type": "code",
@@ -273,20 +297,44 @@
      "outputs": [
       {
        "output_type": "stream",
-       "stream": "stderr",
+       "stream": "stdout",
        "text": [
-        "ERROR: Cache directory /.vep/homo_sapiens not found\n"
+        "   chrom       pos ref alt                   effect    impact gene_name  \\\n0     15  76566668   A   C  downstream_gene_variant  MODIFIER      ETFA   \n2     15  80469886   A   G       synonymous_variant       LOW       FAH   \n13     4    993785   G   A         sequence_feature       LOW      IDUA   \n14    11  36532543   T   A    upstream_gene_variant  MODIFIER     TRAF6   \n15    11  36595107   C   G         missense_variant  MODERATE      RAG1   \n\n            gene_id feature_type       feature_id      tx_biotype   rank  \\\n0   ENSG00000140374   transcript  ENST00000560345  protein_coding          \n2   ENSG00000103876   transcript  ENST00000261755  protein_coding  12/15   \n13  ENSG00000127415  beta_strand  ENST00000247933  protein_coding          \n14  ENSG00000175104   transcript  ENST00000348124  protein_coding          \n15  ENSG00000166349   transcript  ENST00000299440  protein_coding    2/2   \n\n          hgvs_c       hgvs_p  \n0      c.*717T>G               \n2       c.921A>G  p.Gly307Gly  \n13  c.300-615G>A               \n14     c.-325A>T               \n15      c.253C>G   p.Pro85Ala  \n"
        ]
       }
      ],
      "input": [
-      "# run VEP on newborn vcf file \n",
+      "import numpy as np\n",
+      "# read in vcf as tsv file, skipping header\n",
+      "annot_vcf = pd.read_csv('newborns_annot.vcf', sep='\\t', skiprows=8)\n",
       "\n",
-      "# for windows (update location of vep perl script)\n",
-      "!perl D:\\Documents\\tools\\ensembl-tools-release-81\\ensembl-tools-release-81\\scripts\\variant_effect_predictor\\variant_effect_predictor.pl -i newborns.vcf --cache \\home\\summer\\.vep/ --port 3337 --everything --compress \"gzip -dc\""
+      "#split info columns by \"|\" and keep most detrimental consequence (first)\n",
+      "info_df = pd.DataFrame(list(annot_vcf['INFO'].str.split('|')))\n",
+      "#keep only first consequence listed\n",
+      "info_df = info_df[list(info_df.columns[1:11])]\n",
+      "\n",
+      "#merge annotations with annot_vcf\n",
+      "annot_vcf = annot_vcf[np.r_[0:2,3, 4]]\n",
+      "annot_df = pd.concat([annot_vcf, info_df], axis=1)\n",
+      "#remove duplicated rows\n",
+      "annot_df.drop_duplicates(inplace=True)\n",
+      "#rename columns\n",
+      "annot_df.columns = ['chrom', 'pos', 'ref', 'alt', 'effect', 'impact','gene_name', 'gene_id', 'feature_type', \n",
+      "                    'feature_id', 'tx_biotype', 'rank', 'hgvs_c', 'hgvs_p']"
      ],
      "language": "python",
-     "prompt_number": 6
+     "prompt_number": 193
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "newborn_annot = pd.merge(newborns, annot_df, on=['chrom', 'pos', 'ref', 'alt'], how='left')"
+     ],
+     "language": "python",
+     "prompt_number": 213
     },
     {
      "cell_type": "heading",
@@ -311,9 +359,9 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "nb_dominant = newborns[(newborns['inheritance'] == 'AD')]\n",
-      "nb_hom_recessive = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '1/1'))]\n",
-      "nb_het = newborns[((newborns['inheritance'] == 'AR') & (newborns['gt'] == '0/1'))]\n",
+      "nb_dominant = newborn_annot[(newborn_annot['inheritance'] == 'AD')]\n",
+      "nb_hom_recessive = newborn_annot[((newborn_annot['inheritance'] == 'AR') & (newborn_annot['gt'] == '1/1'))]\n",
+      "nb_het = newborn_annot[((newborn_annot['inheritance'] == 'AR') & (newborn_annot['gt'] == '0/1'))]\n",
       "\n",
       "# add family id to simplify variant matching\n",
       "nb_het['family_id'] = nb_het['sample_id'].apply(lambda x: x[:-3])\n",
@@ -329,7 +377,7 @@
       "                                                                   x['family_id']),axis=1)"
      ],
      "language": "python",
-     "prompt_number": 83
+     "prompt_number": 214
     },
     {
      "cell_type": "heading",
@@ -386,7 +434,7 @@
       "nb_and_mom.rename(columns=lambda x: x.replace('_x', ''), inplace=True)"
      ],
      "language": "python",
-     "prompt_number": 84
+     "prompt_number": 215
     },
     {
      "cell_type": "markdown",
@@ -417,7 +465,7 @@
       "by_gene = het_cands.groupby(['gene', 'family_id'])"
      ],
      "language": "python",
-     "prompt_number": 96
+     "prompt_number": 216
     },
     {
      "cell_type": "markdown",
@@ -430,78 +478,7 @@
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "('ACAD9', '102-07005') 1119    102-07005\n4595    102-07005\n4596    102-07005\n4597    102-07005\n4598    102-07005\n4599    102-07005\n4600    102-07005\n4601    102-07005\n4602    102-07005\nName: family_id, dtype: object\n('ACAT1', '102-07005') 1933    102-07005\n5276    102-07005\nName: family_id, dtype: object\n('ACSF3', '102-00996') 1826    102-00996\n1827    102-00996\n1828    102-00996\n1829    102-00996\n1830    102-00996\n1831    102-00996\n1832    102-00996\n6910    102-00996\n6911    102-00996\n6912    102-00996\n6913    102-00996\n6914    102-00996\n6915    102-00996\n6916    102-00996\n6917    102-00996\nName: family_id, dtype: object\n('CFTR', '102-00961')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 3515    102-00961\n3516    102-00961\n3517    102-00961\n3518    102-00961\n3559    102-00961\n3560    102-00961\n3561    102-00961\n3562    102-00961\n3563    102-00961\n3564    102-00961\nName: family_id, dtype: object\n('CPS1', '102-02001') 2404    102-02001\n5615    102-02001\nName: family_id, dtype: object\n('DBT', '102-00932') 1703    102-00932\n3995    102-00932\nName: family_id, dtype: object"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n('DBT', '102-00961') 1693    102-00961\n2695    102-00961\nName: family_id, dtype: object\n('DBT', '102-00979') 1700    102-00979\n3994    102-00979\nName: family_id, dtype: object\n('DBT', '102-01532') 1419    102-01532\n1697    102-01532\n3992    102-01532\nName: family_id, dtype: object\n('DCLRE1C', '102-00974') 1972    102-00974\n3854    102-00974\nName: family_id, dtype: object\n('DCLRE1C', '102-00979') 3070    102-00979\n5369    102-00979\n5370    102-00979\n5371    102-00979\nName: family_id, dtype: object\n('ETFB', '102-00974')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 1930    102-00974\n2913    102-00974\n2996    102-00974\n5219    102-00974\nName: family_id, dtype: object\n('ETFB', '102-01532') 1916    102-01532\n2981    102-01532\nName: family_id, dtype: object\n('ETFB', '102-02001') 1926    102-02001\n1927    102-02001\n2991    102-02001\n5215    102-02001\n5231    102-02001\n5248    102-02001\nName: family_id, dtype: object\n('ETFB', '102-07005') 2995    102-07005\n5218    102-07005\n5251    102-07005\n6672    102-07005\nName: family_id, dtype: object\n('ETFB', '102-07009') 1920    102-07009\n5229    102-07009\n5245    102-07009\nName: family_id, dtype: object\n('FAH', '102-00979')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 2       102-00979\n3       102-00979\n4       102-00979\n5       102-00979\n6       102-00979\n7       102-00979\n8       102-00979\n9       102-00979\n10      102-00979\n11      102-00979\n12      102-00979\n3367    102-00979\n3368    102-00979\n3369    102-00979\n3370    102-00979\n3371    102-00979\nName: family_id, dtype: object\n('FOXE1', '102-07009') 1681    102-07009\n1682    102-07009\n4479    102-07009\nName: family_id, dtype: object\n('GALE', '102-00996') 876     102-00996\n4063    102-00996\n4064    102-00996\nName: family_id, dtype: object\n('GALE', '102-02001') 2379    102-02001\n4079    102-02001\n4080    102-02001\nName: family_id, dtype: object\n('GLIS3', '102-00961') 524     102-00961\n2819    102-00961\n2820    102-00961\n5850    102-00961\nName: family_id, dtype: object"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n('GLIS3', '102-02001') 533     102-02001\n2268    102-02001\nName: family_id, dtype: object\n('GUSB', '102-00979') 1394    102-00979\n3104    102-00979\n3105    102-00979\n3106    102-00979\n3107    102-00979\n3108    102-00979\n3109    102-00979\nName: family_id, dtype: object\n('HLCS', '102-00979') 1585    102-00979\n1586    102-00979\n2457    102-00979\n2458    102-00979\n2459    102-00979\n2460    102-00979\nName: family_id, dtype: object\n('HLCS', '102-07009') 2473    102-07009\n4377    102-07009\nName: family_id, dtype: object\n('IDUA', '102-00961')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 4318    102-00961\n4319    102-00961\n4320    102-00961\n4321    102-00961\n4322    102-00961\n4323    102-00961\n4324    102-00961\n6850    102-00961\n6851    102-00961\n6852    102-00961\n6853    102-00961\n6854    102-00961\n6855    102-00961\n6856    102-00961\n6857    102-00961\n6858    102-00961\n6859    102-00961\n6860    102-00961\n6861    102-00961\n6862    102-00961\n6863    102-00961\n6864    102-00961\n6865    102-00961\nName: family_id, dtype: object\n('IYD', '102-00974') 63      102-00974\n64      102-00974\n2447    102-00974\n2448    102-00974\nName: family_id, dtype: object\n('NPC1', '102-00979')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 675     102-00979\n3037    102-00979\nName: family_id, dtype: object\n('OPA3', '102-00996') 4690    102-00996\n5532    102-00996\n5533    102-00996\nName: family_id, dtype: object\n('OPA3', '102-02001') 3803    102-02001\n4698    102-02001\nName: family_id, dtype: object\n('PAH', '102-07009') 2717    102-07009\n3126    102-07009\n5105    102-07009\nName: family_id, dtype: object\n('PEPD', '102-00979') 1736    102-00979\n1737    102-00979\n1738    102-00979\n1739    102-00979\n1740    102-00979\n1741    102-00979\n1742    102-00979\n1743    102-00979\n6803    102-00979\nName: family_id, dtype: object\n('PPM1K', '102-00932')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 2735    102-00932\n2738    102-00932\n2739    102-00932\n2740    102-00932\n2741    102-00932\n2742    102-00932\n2743    102-00932\n2744    102-00932\n2745    102-00932\n2746    102-00932\n2747    102-00932\n2748    102-00932\n2749    102-00932\nName: family_id, dtype: object\n('PPM1K', '102-00979') 3620    102-00979\n3622    102-00979\n5114    102-00979\nName: family_id, dtype: object\n('PRODH', '102-02001') 2608    102-02001\n2609    102-02001\n2610    102-02001\n3497    102-02001\n3498    102-02001\nName: family_id, dtype: object\n('STAR', '102-00979') 4866    102-00979\n6701    102-00979\nName: family_id, dtype: object\n('TCN2', '102-07005')"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " 2676    102-07005\n2677    102-07005\n2678    102-07005\n2679    102-07005\n4464    102-07005\nName: family_id, dtype: object\n"
-       ]
-      }
-     ],
+     "outputs": [],
      "input": [
       "# create empty list to hold comp_hets\n",
       "comp_hets = []\n",
@@ -513,7 +490,6 @@
       "        if (len(group[(group['var_id'].isin(nb_and_dad['var_id']))] > 1) and \\\n",
       "                len(group[(group['var_id'].isin(nb_and_mom['var_id']))] > 1)):\n",
       "            comp_hets.append(group)\n",
-      "            print name, group['family_id']\n",
       "        # or if there is a variant from both parents\n",
       "        elif (len(group[(group['var_id'].isin(nb_and_dad['var_id']))] > 0) and \\\n",
       "                len(group[(group['var_id'].isin(nb_and_mom['var_id']))] > 0)):\n",
@@ -522,7 +498,36 @@
       "                    comp_hets.append(group)"
      ],
      "language": "python",
-     "prompt_number": 104
+     "prompt_number": 233
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "TO Do: \n",
+      "\n",
+      "- Save to file\n",
+      "= Add DANN annotation"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "         sample_id chrom        pos        rs_id ref alt    qual filter   gt  \\\n397   102-07005-03     3  128634878  rs187378980   C   T  166.00   PASS  0/1   \n1533  102-07005-03     3  128628253  rs150283105   C   T  187.00   PASS  0/1   \n1534  102-07005-03     3  128628253  rs150283105   C   T  187.00   PASS  0/1   \n1535  102-07005-03     3  128628253  rs150283105   C   T  187.00   PASS  0/1   \n1536  102-07005-03     3  128628253  rs150283105   C   T  187.00   PASS  0/1   \n\n      kav_freq            ...             gene_name          gene_id  \\\n397   0.001250            ...                 ACAD9  ENSG00000177646   \n1533  0.000104            ...                 ACAD9  ENSG00000177646   \n1534  0.000104            ...                 ACAD9  ENSG00000177646   \n1535  0.000104            ...                 ACAD9  ENSG00000177646   \n1536  0.000104            ...                 ACAD9  ENSG00000177646   \n\n     feature_type       feature_id               tx_biotype   rank     hgvs_c  \\\n397    transcript  ENST00000508971  nonsense_mediated_decay  16/16  n.*685C>T   \n1533   transcript  ENST00000308982           protein_coding  15/18  c.1552C>T   \n1534   transcript  ENST00000308982           protein_coding  15/18  c.1552C>T   \n1535   transcript  ENST00000308982           protein_coding  15/18  c.1552C>T   \n1536   transcript  ENST00000308982           protein_coding  15/18  c.1552C>T   \n\n           hgvs_p  family_id                     var_id  \n397                102-07005  3:128634878:C:T:102-07005  \n1533  p.Arg518Cys  102-07005  3:128628253:C:T:102-07005  \n1534  p.Arg518Cys  102-07005  3:128628253:C:T:102-07005  \n1535  p.Arg518Cys  102-07005  3:128628253:C:T:102-07005  \n1536  p.Arg518Cys  102-07005  3:128628253:C:T:102-07005  \n\n[5 rows x 43 columns]\n"
+       ]
+      }
+     ],
+     "input": [
+      "comphet_df = pd.concat(comp_hets)\n"
+     ],
+     "language": "python",
+     "prompt_number": 235
     },
     {
      "cell_type": "code",
