added summary section

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -59,6 +59,16 @@
      ]
     },
     {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      ""
+     ],
+     "language": "python"
+    },
+    {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
@@ -574,45 +584,6 @@
      ],
      "language": "python",
      "prompt_number": 32
-    },
-    {
-     "cell_type": "heading",
-     "metadata": {},
-     "level": 2,
-     "source": [
-      "Summarizing Results\t"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "impact\nLOW         1\nMODERATE    1\nMODIFIER    1\nName: impact, dtype: int64\n\n\neffect\n3_prime_UTR_variant        1\n5_prime_UTR_variant        1\ndownstream_gene_variant    1\nintron_variant             1\nmissense_variant           1\nnon_coding_exon_variant    1\nsequence_feature           1\nsynonymous_variant         1\nupstream_gene_variant      1\nName: effect, dtype: int64\n"
-       ]
-      }
-     ],
-     "input": [
-      "def summarize(df):\n",
-      "    impact = df.groupby('impact').impact.nunique()\n",
-      "    print impact \n",
-      "    print \"\\n\"\n",
-      "    effect = df.groupby('effect').effect.nunique()\n",
-      "    print effect\n",
-      "    \n",
-      "\n",
-      "summarize(comphet_df)\n",
-      "\n",
-      "# dominant\n",
-      "\n",
-      "# hom recessive"
-     ],
-     "language": "python",
-     "prompt_number": 45
     },
     {
      "cell_type": "heading",
