working on snpeff command

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -226,26 +226,6 @@
      "prompt_number": 2
     },
     {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The dataframe was separated into mother, father and newborn for downstream analysis. "
-     ]
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "newborns = nbs_df[nbs_df['sample_id'].str.endswith('03')]\n",
-      "mothers = nbs_df[nbs_df['sample_id'].str.endswith('01')]\n",
-      "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]"
-     ],
-     "language": "python",
-     "prompt_number": 3
-    },
-    {
      "cell_type": "heading",
      "metadata": {},
      "level": 2,
@@ -261,61 +241,12 @@
      ]
     },
     {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "newborns.tsv\n0 1 2 3\n"
-       ]
-      }
-     ],
-     "input": [
-      "import os\n",
-      "\n",
-      "# output columns to vcf file using a modified version of anntools tab2vcf.py\n",
-      "nb_to_vcf = newborns[['chrom','pos', 'ref', 'alt']]\n",
-      "\n",
-      "\n",
-      "# write to file for conversion to vcf\n",
-      "nb_to_vcf.to_csv('{}/newborns.tsv'.format(os.getcwd()), header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
-      "\n",
-      "# run tab2vcf.py script\n",
-      "try:\n",
-      "    %run ./tab2vcf.py newborns.tsv\n",
-      "except Exception,e: print str(e)"
-     ],
-     "language": "python",
-     "prompt_number": 4
-    },
-    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The newborn variants in the VCF file were annotated with coding consequences using SnpEff version 4.1h (build 2015-08-03) with _GRCh37.75. "
-     ]
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [],
-     "input": [
-      "# run SnpEff on newborns.vcf for windows\n",
-      "!java -Xmx4g -jar `cygpath -m /cygdrive/D/Documents/tools/snpEff/snpEff.jar` -v GRCh37.75 ./newborns.tsv.vcf > \n",
-      "newborns_annot.vcf"
-     ],
-     "language": "python",
-     "prompt_number": 108
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The annotations were read back into Python, parsed and matched with the newborn variant data frame."
+      "The newborn variants in the VCF file were annotated with coding consequences using SnpEff version 4.1h (build 2015-08-03) with GRCh37.75. \n",
+      "\n",
+      "The functional annotations were read back into Python, parsed and matched with the each respective variant data frame."
      ]
     },
     {
@@ -361,44 +292,91 @@
       "import numpy as np\n",
       "\n",
       "# function to add functional annotation\n",
-      "def df_to_vcf(input_df, out_name):\n",
+      "def df_to_snpeff(input_df, out_name):\n",
       "    # subset columns to output to vcf file\n",
       "    df = input_df[['chrom', 'pos', 'ref', 'alt']]\n",
       "    # write to file for conversion to vcf\n",
       "    df.to_csv('{}/{}.tsv'.format(os.getcwd(), out_name), header=True, encoding='utf-8', sep=\"\\t\", index=False)\n",
       "    # run tab2vcf.py script\n",
-      "    %run ./tab2vcf.py {'{}/{}.tsv'.format(os.getcwd(), out_name)}\n",
-      "    \n",
-      "def vcf_to_snpeff(vcf):\n",
-      "    # run SnpEff on vcf file\n",
-      "    #!java -Xmx4g -jar `cygpath -m /cygdrive/D/Documents/tools/snpEff/snpEff.jar` \\\n",
-      "         #-v GRCh37.75 {vcf} > {'{}/{}.vcf'.format(os.getcwd(), out_name)}\n",
-      "    os.system(r\"C:\\cygwin64\\bin\\bash --login -c 'java -Xmx4g -jar `cygpath -m \\\n",
-      "    /cygdrive/D/Documents/tools/snpEff/snpEff.jar` -v GRCh37.75 `cygpath -m \\\n",
-      "    /cygdrive/D/Documents/GitHub/impala_scripts/test.tsv.vcf > test_snp_out'\")\n",
-      "    # # read in vcf as tsv file, skipping header\n",
-      "    # annot_vcf = pd.read_csv('{}/{}.vcf'.format(os.getcwd(), out_name), sep='\\t', skiprows=8)\n",
-      "    # # split info columns by \"|\" and keep most detrimental consequence (first)\n",
-      "    # info_df = pd.DataFrame(list(annot_vcf['INFO'].str.split('|')))\n",
-      "    # # keep only first consequence listed\n",
-      "    # info_df = info_df[list(info_df.columns[1:11])]\n",
-      "    # # merge annotations with annot_vcf\n",
-      "    # annot_vcf = annot_vcf[np.r_[0:2, 3, 4]]\n",
-      "    # annot_df = pd.concat([annot_vcf, info_df], axis=1)\n",
-      "    # # remove duplicated rows\n",
-      "    # annot_df.drop_duplicates(inplace=True)\n",
-      "    # # rename columns\n",
-      "    # annot_df.columns =['chrom', 'pos', 'ref', 'alt', 'effect', 'impact', 'gene_name', 'gene_id', 'feature_type', \\\n",
-      "    #     'feature_id', 'tx_biotype', 'rank', 'hgvs_c', 'hgvs_p']\n",
-      "    # # merge annotations with variant table\n",
-      "    # df_func_annot = pd.merge(input_df, annot_df, on=['chrom', 'pos', 'ref', 'alt'], how='left')\n",
-      "    # # drop columns with duplicated info after merge\n",
-      "    # df_func_annot.drop(['gene_name', 'gene_id', 'feature_id', 'feature_type', 'tx_biotype'], axis=1, inplace=True) \\\n",
+      "    os.system(\"./tab2vcf.py '{}/{}.tsv'.format(os.getcwd(), out_name)\")\n",
+      "    #os.system(\"java -Xmx4g -jar /Users/summerrae/tools/snpEff/snpEff.jar -v GRCh37.75 '{}/{}.tsv'.format(os.getcwd(), out_name) > '{}_annot'.format(out_name)\")\n",
       "\n",
-      "test = vcf_to_snpeff('test.tsv.vcf')"
+      "df_to_snpeff(nbs_df, 'nbs_genes')\n",
+      "    \n",
+      "# def vcf_to_snpeff(vcf, annot_outfile_name):\n",
+      "#     # run SnpEff on vcf file\n",
+      "#     #!java -Xmx4g -jar `cygpath -m /cygdrive/D/Documents/tools/snpEff/snpEff.jar` \\\n",
+      "#          #-v GRCh37.75 {vcf} > {'{}/{}.vcf'.format(os.getcwd(), out_name)}\n",
+      "#     os.system('java -Xmx4g -jar /Users/summerrae/tools/snpEff/snpEff.jar -v GRCh37.75 {vcf} > {annot_outfile_name)}'\n",
+      "#     # # read in vcf as tsv file, skipping header\n",
+      "#     # annot_vcf = pd.read_csv('{}/{}.vcf'.format(os.getcwd(), out_name), sep='\\t', skiprows=8)\n",
+      "#     # # split info columns by \"|\" and keep most detrimental consequence (first)\n",
+      "#     # info_df = pd.DataFrame(list(annot_vcf['INFO'].str.split('|')))\n",
+      "#     # # keep only first consequence listed\n",
+      "#     # info_df = info_df[list(info_df.columns[1:11])]\n",
+      "#     # # merge annotations with annot_vcf\n",
+      "#     # annot_vcf = annot_vcf[np.r_[0:2, 3, 4]]\n",
+      "#     # annot_df = pd.concat([annot_vcf, info_df], axis=1)\n",
+      "#     # # remove duplicated rows\n",
+      "#     # annot_df.drop_duplicates(inplace=True)\n",
+      "#     # # rename columns\n",
+      "#     # annot_df.columns =['chrom', 'pos', 'ref', 'alt', 'effect', 'impact', 'gene_name', 'gene_id', 'feature_type', \\\n",
+      "#     #     'feature_id', 'tx_biotype', 'rank', 'hgvs_c', 'hgvs_p']\n",
+      "#     # # merge annotations with variant table\n",
+      "#     # df_func_annot = pd.merge(input_df, annot_df, on=['chrom', 'pos', 'ref', 'alt'], how='left')\n",
+      "#     # # drop columns with duplicated info after merge\n",
+      "#     # df_func_annot.drop(['gene_name', 'gene_id', 'feature_id', 'feature_type', 'tx_biotype'], axis=1, inplace=True) \\\n",
+      "# \n",
+      "# test = vcf_to_snpeff('test.tsv.vcf')"
      ],
      "language": "python",
-     "prompt_number": 70
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "SystemExit",
+       "evalue": "2",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+        "\u001b[0;31mSystemExit\u001b[0m                                Traceback (most recent call last)",
+        "\u001b[0;32m/usr/local/lib/python2.7/site-packages/IPython/utils/py3compat.pyc\u001b[0m in \u001b[0;36mexecfile\u001b[0;34m(fname, glob, loc, compiler)\u001b[0m\n\u001b[1;32m    215\u001b[0m             \u001b[0mwhere\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mns\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mns\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mns\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mcompiler\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m                 \u001b[0mbuiltin_mod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m                 \u001b[0mscripttext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltin_mod\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'\\n'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/summerrae/impala_scripts/tab2vcf.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mArgumentParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_argument\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'input_tsv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetavar\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'i'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhelp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Enter the full file path to the tsv file'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_tsv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/local/Cellar/python/2.7.9/Frameworks/Python.framework/Versions/2.7/lib/python2.7/argparse.pyc\u001b[0m in \u001b[0;36mparse_args\u001b[0;34m(self, args, namespace)\u001b[0m\n\u001b[1;32m   1702\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0margv\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1703\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'unrecognized arguments: %s'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1704\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1705\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/local/Cellar/python/2.7.9/Frameworks/Python.framework/Versions/2.7/lib/python2.7/argparse.pyc\u001b[0m in \u001b[0;36merror\u001b[0;34m(self, message)\u001b[0m\n\u001b[1;32m   2372\u001b[0m         \"\"\"\n\u001b[1;32m   2373\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_usage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_sys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2374\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%s: error: %s\\n'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprog\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/usr/local/Cellar/python/2.7.9/Frameworks/Python.framework/Versions/2.7/lib/python2.7/argparse.pyc\u001b[0m in \u001b[0;36mexit\u001b[0;34m(self, status, message)\u001b[0m\n\u001b[1;32m   2360\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2361\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_print_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_sys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2362\u001b[0;31m         \u001b[0m_sys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2363\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2364\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0merror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mSystemExit\u001b[0m: 2"
+       ]
+      }
+     ],
+     "input": [
+      "%tb"
+     ],
+     "language": "python",
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The dataframe was separated into mother, father and newborn for downstream analysis. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "newborns = nbs_df[nbs_df['sample_id'].str.endswith('03')]\n",
+      "mothers = nbs_df[nbs_df['sample_id'].str.endswith('01')]\n",
+      "fathers = nbs_df[nbs_df['sample_id'].str.endswith('02')]"
+     ],
+     "language": "python"
     },
     {
      "cell_type": "heading",
